# viking

./: .neomake.yaml  .rusty-hook.toml  Cargo.toml
.github/workflows/: release.yml
docs/: README.md
res/: example.yaml
src/: args.rs  config.rs  engine.rs  error.rs  ledger.rs  main.rs  reference.rs
