[package]
name = "viking"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2021"
license = "MIT"
description = "Raiding website in style."
homepage = "https://github.com/replicadse/viking"
repository = "https://github.com/replicadse/viking"
keywords = ["cli", "website", "topology"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[features]
default = []

[dependencies]
async-trait = "0.1.72"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = "4.3.19"
clap_complete = "4.3.2"
clap_mangen = "0.2.12"
clap-markdown = "0.1.3"
serde = { version = "1.0.179", features = ["derive"] }
serde_yaml = "0.9.25"
bytes = "1.4.0"
itertools = "0.11.0"
anyhow = "1.0.72"
thiserror = "1.0.44"

[dev-dependencies]
rusty-hook = "0.11.2"
