[package]
name = "viking"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2021"
license = "MIT"
description = "Raiding APIs in style."
homepage = "https://crates.io/crates/viking"
repository = "https://github.com/replicadse/viking"
keywords = ["cli", "load", "test", "stress"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[features]
default = []

[dependencies]
async-trait = "0.1.72"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = "4.3.19"
clap_complete = "4.3.2"
clap_mangen = "0.2.12"
clap-markdown = "0.1.3"
serde = { version = "1.0.175", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.103"
bytes = "1.4.0"
mime = "0.3.17"
handlebars = "4.4.0"
crossterm = "0.26.1"
itertools = "0.11.0"
schemars = "0.8.12"
fancy-regex = "0.11.0"
anyhow = "1.0.72"
thiserror = "1.0.44"
flume = "0.11.0"
reqwest = { version = "0.11.20", features = ["blocking"] }

[dev-dependencies]
rusty-hook = "0.11.2"
