[package]
name = "viking"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2021"
license = "MIT"
description = "Raiding APIs in style."
homepage = "https://crates.io/crates/viking"
repository = "https://github.com/replicadse/viking"
keywords = ["cli", "load", "test", "stress"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[features]
default = []
experimental = []

[dependencies]
async-trait = "0.1.81"
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
clap = "4.5.16"
clap_complete = "4.5.20"
clap_mangen = "0.2.23"
clap-markdown = "0.1.4"
serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.125"
bytes = "1.7.1"
mime = "0.3.17"
handlebars = "6.0.0"
crossterm = "0.28.1"
itertools = "0.13.0"
schemars = "0.8.21"
fancy-regex = "0.13.0"
anyhow = "1.0.86"
thiserror = "1.0.63"
flume = "0.11.0"
reqwest = { version = "0.12.7", features = ["blocking"] }

[dev-dependencies]
hoox = "0.3.0"
